# rustme

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: tests.yml
.rustme/: config.ron  docs.md  generated.md  header.md
examples/basic/: .rustme.ron  README.md  content.md  header.md  main.rs
main/: crates.js  search-index.js  settings.html  source-files.js
main/implementors/core/clone/: trait.Clone.js
main/implementors/core/convert/: trait.From.js
main/implementors/core/default/: trait.Default.js
main/implementors/core/fmt/: trait.Debug.js  trait.Display.js
main/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
main/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
main/implementors/serde/de/: trait.Deserialize.js
main/implementors/serde/ser/: trait.Serialize.js
main/implementors/std/error/: trait.Error.js
main/rustme/: all.html  enum.Error.html  enum.FileConfiguration.html  enum.Glossary.html  enum.Term.html  fn.generate.html  fn.generate_in_directory.html  index.html  sidebar-items.js  struct.Cache.html  struct.Configuration.html  struct.File.html  struct.RustMe.html
main/rustme/rustme/: enum.Error.html  enum.FileConfiguration.html  enum.Glossary.html  enum.Term.html  fn.generate.html  fn.generate_in_directory.html  struct.Cache.html  struct.Configuration.html  struct.File.html  struct.RustMe.html
main/src/rustme/: lib.rs.html  rustme.rs.html
src/: lib.rs  main.rs  rustme.rs
